tests/paczka1/fuzzy1/53991698.err
Error in line 1: A578 A23 64,9
Error in line 10: kruBw2qPcE A23 0,7
Error in line 21: kU8KLHxTa S449 32,0
